--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "redux": "^3.6.0",
     "redux-actions": "^1.1.0",
     "redux-logger": "^2.7.4",
-    "redux-saga": "^0.13.0"
+    "redux-saga": "^0.13.0",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
